Update feilire.html - wording

--- a/feilire.html
+++ b/feilire.html
@@ -112,7 +112,8 @@
 
   <h1>Imeachtaí as Gaeilge i nGaillimh</h1>
   <p class="muted">
-    Taispeántar anseo imeachtaí a cuireadh isteach tríd an bhfoirm agus atá ceadaithe.
+    Is féidir imeacht a chlárú leis an bhfoirm ag bun an leathanaigh.<br><br>
+    <i>Ní ghlacfar le freagracht as aon chur amú ama ná airgid, gortú nó bás, argóintí nó croíthe briste ag eascairt ó bhotúin ar bith sa liosta thíos.</i>
   </p>
 
   <div class="filters">
