--- a/feilire.html
+++ b/feilire.html
@@ -153,7 +153,7 @@
 
   <h1>Imeachtaí as Gaeilge i nGaillimh</h1>
   <p class="muted">
-    Is féidir imeacht a chlárú leis an bhfoirm ag bun an leathanaigh.<br>
+    Is féidir imeacht a chlárú leis an bhfoirm ag bun an leathanaigh.<br><br><br>
     <i>Ní ghlacfar freagracht as aon chur amú ama, airgid, gortú nó bás, argóintí nó croíthe briste ag eascairt ó bhotúin ar bith sa liosta thíos.</i>
   </p>
 
