--- a/feilire.html
+++ b/feilire.html
@@ -161,7 +161,11 @@
   <h1>Imeachtaí as Gaeilge i nGaillimh</h1>
   <p class="muted">
     Is féidir imeacht a chlárú leis an bhfoirm ag bun an leathanaigh.<br><br><br>
-    <i>Ní ghlacfar freagracht as aon chur amú ama, airgid, gortú nó bás, argóintí nó croíthe briste ag eascairt ó bhotúin ar bith sa liosta thíos.</i>
+    <i>Ní ghlacfar le freagracht as aon chur amú ama, airgid, gortú nó bás, argóintí nó croíthe briste ag eascairt ó bhotúin ar bith sa liosta thíos.</i>
+    <br><br><br>
+    Ba cheart go mbeadh tuismitheoirí/caomhnóirí i láthair d'imeachtaí le haghaidh páistí scoile.
+    <br><br><br>
+    Ní fhógraítear imeachtaí ar-líne anseo, nó ranganna Gaeilge a gcaithfear íoc astu.
   </p>
 
   <!-- Filters -->
