Update feilire.html  -hopefully fixing spacing for phone

--- a/feilire.html
+++ b/feilire.html
@@ -117,8 +117,8 @@
     }
 
     th.time-col, td.time-col {
-      white-space: nowrap;
-      min-width: 70px; /* wide enough for hh:mm */
+      white-space: nowrap;  /* keep hh:mm on one line */
+      width: 1%;            /* shrink column to fit content */
     }
 
     tr:nth-child(even) {
