Update index.html - some wording only

--- a/index.html
+++ b/index.html
@@ -160,12 +160,14 @@
 
   <h1>Imeachtaí as Gaeilge i nGaillimh</h1>
   <p class="muted">
-    Is féidir imeacht a chlárú leis an bhfoirm ag bun an leathanaigh.<br><br><br>
-    <i>Ní ghlacfar le freagracht as aon chur amú ama, airgid, gortú nó bás, argóintí nó croíthe briste ag eascairt ó bhotúin ar bith sa liosta thíos.</i>
-    <br><br><br>
+    Is féidir imeacht a chlárú leis an bhfoirm ag bun an leathanaigh.<br><br>
+    Ní fhógraítear imeachtaí ar-líne anseo, nó ranganna Gaeilge a gcaithfear íoc astu.<br><br>
     Ba cheart go mbeadh tuismitheoirí/caomhnóirí i láthair d'imeachtaí le haghaidh páistí scoile.
     <br><br><br>
-    Ní fhógraítear imeachtaí ar-líne anseo, nó ranganna Gaeilge a gcaithfear íoc astu.
+    <i>Ní ghlacfar le freagracht as aon chur amú ama, airgid, gortú nó bás, argóintí nó croíthe briste ag eascairt ó bhotúin ar bith sa liosta thíos.</i>
+    <br><br>
+    Más gá aon rud a athrú - msh, má dhéanann tú botún, nó má bhriseann an suíomh - cuirigí rphost chuig feilire[ponc]gaillimh[ag]gmail[ponc]com. 
+    <br><br>
   </p>
 
   <!-- Filters -->
