Update index.html - wide column on phone

--- a/index.html
+++ b/index.html
@@ -150,6 +150,33 @@
         max-width: 320px;
       }
     }
+
+    @media (max-width: 600px) {
+  /* Make table font smaller */
+  table {
+    font-size: 0.8rem;  /* smaller than the default 0.95rem */
+  }
+
+  /* Optional: make headings and body text slightly smaller */
+  h1 {
+    font-size: 1.5rem;
+  }
+
+  .muted {
+    font-size: 0.8rem;
+  }
+
+  /* Make filter text smaller */
+  fieldset {
+    font-size: 0.85rem;
+  }
+
+  button {
+    font-size: 0.85rem;
+    padding: 0.4rem 1rem;
+  }
+}
+
   </style>
 
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
