--- a/index.html
+++ b/index.html
@@ -138,26 +138,13 @@
       border-radius: 6px;
     }
 
-    /* ---------- Responsive ---------- */
     @media (max-width: 600px) {
-      .filters {
-        flex-direction: column;
-        align-items: center;
-      }
-
-      fieldset {
-        width: 100%;
-        max-width: 320px;
-      }
-    }
-
-    @media (max-width: 600px) {
-  /* Make table font smaller */
-  table {
-    font-size: 0.8rem;  /* smaller than the default 0.95rem */
+  /* Table font size */
+  table, th, td {
+    font-size: 0.8rem;  /* now applies directly to cells */
   }
 
-  /* Optional: make headings and body text slightly smaller */
+  /* Optional: headings and instructions */
   h1 {
     font-size: 1.5rem;
   }
@@ -166,7 +153,7 @@
     font-size: 0.8rem;
   }
 
-  /* Make filter text smaller */
+  /* Filter labels and buttons */
   fieldset {
     font-size: 0.85rem;
   }
@@ -174,6 +161,12 @@
   button {
     font-size: 0.85rem;
     padding: 0.4rem 1rem;
+  }
+
+  /* Make rightmost column wrap */
+  th.more-col, td.more-col {
+    white-space: normal;
+    word-break: break-word;
   }
 }
 
