--- a/index.html
+++ b/index.html
@@ -138,6 +138,41 @@
       border-radius: 6px;
     }
 
+/* ---------- Responsive ---------- */
+  @media (max-width: 600px) {
+    .filters {
+      flex-direction: column;
+      align-items: center;
+    }
+
+    fieldset {
+      width: 100%;
+      max-width: 320px;
+    }
+
+    /* --------- New: smaller fonts on phone --------- */
+    table {
+      font-size: 0.8rem;  /* smaller table text */
+    }
+
+    h1 {
+      font-size: 1.5rem;  /* smaller heading */
+    }
+
+    .muted {
+      font-size: 0.8rem;  /* smaller instructions */
+    }
+
+    fieldset {
+      font-size: 0.85rem;  /* smaller filter labels */
+    }
+
+    button {
+      font-size: 0.85rem;  /* smaller buttons */
+      padding: 0.4rem 1rem;
+    }
+  }
+    
   </style>
 
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
